--- a/ex22.html
+++ b/ex22.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <title>JS2 test</title>
-    <script src = "test2.js"></script>
+    <title>JS2 Exercice22</title>
+    <script type = "text/javascript" src = "exercice22.js"></script>
   </head>
   <body onload = "reDisplay()">
     <p>Send me a message: </p>
