--- a/texte.html
+++ b/texte.html
@@ -1,9 +1,17 @@
-<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - c\'est bon?
-<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - This message is from texte.html directly
-<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - But it is slow
-<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - About 4 seconds
-<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - This time is faster
-<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - Every thing will be well<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - faster?<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - But what happened these days?<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - J\'ai peur de rentrer chez moi
-<br />- <a href='javascript:recherche("137.000.0.000");'>137.194.2.165</a> - Je veux passer la nuit ici
-<br />- <a href='javascript:recherche("137.000.0.000");'>137.194.2.165</a> - Can't change the hose name even in text? Bizarre
-<br />- <a href='javascript:recherche("137.000.0.000");'>137.000.0.000</a> - It became slow encore
+
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - a -15:43:31
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - b -15:43:42
+<br />- <a href='javascript:recherche("137.194.2.165");'>138.194.2.165</a> - c -15:44:33
+<br />- <a href='javascript:recherche("137.194.2.165");'>139.194.2.165</a> - d -16:05:10
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.104.2.165</a> - c -15:44:33
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.14.2.165</a> - d -16:05:10
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - it works -16:57:42
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - why -17:01:00
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.16</a> - better? -17:02:57
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - blank -17:05:08
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.19.2.165</a> - ??? -17:05:52
+<br />- <a href='javascript:recherche("137.194.2.165");'>37.194.2.165</a> - if i didn't open the file? -17:06:18
+
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - again -17:08:22<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - ici c'est bon -17:12:01<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - talk -17:21:31<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - ni hai hao ma -17:22:55<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - change ip? -19:06:40
+<br />- <a href='javascript:recherche("137.194.2.165");' >137.194.2.165</a> - what? -19:08:55
+<br />- <a href='javascript:recherche("137.194.2.165");'>137.194.2.165</a> - 6 -20:34:43
