--- a/ex32.html
+++ b/ex32.html
@@ -6,7 +6,7 @@
     <script src = "exercice32.js"></script>
   </head>
   <body onload = "loadJSON()">
-    <input type = "button" id = "buttonPauseContinuer" onclick="play()" value="Pause"/>
+    <input type = "button" id = "buttonPauseContinuer" onclick="pause()" value="Pause"/>
     <input type = "button" id = "buttonContinuer" onclick="play()" value="Continuer"/><br />
 
     <div id = "MAIN">
