--- a/ex32.html
+++ b/ex32.html
@@ -6,8 +6,9 @@
     <script src = "exercice32.js"></script>
   </head>
   <body onload = "loadJSON()">
+    <input type = "button" id = "buttonPrevious" onclick="playPre()" value="Previous"/>
     <input type = "button" id = "buttonPauseContinuer" onclick="pause()" value="Pause"/>
-    <input type = "button" id = "buttonContinuer" onclick="play()" value="Continuer"/><br />
+    <input type = "button" id = "buttonNext" onclick="playNext()" value="Next"/><br />
 
     <div id = "MAIN">
     </div>
